# hermes_btc_agent_v2_review

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  agents.md  alembic.ini  pyproject.toml  review_01.patch  review_02.patch
app/: __init__.py
configs/: .gitkeep
logs/: .gitkeep
migrations/: .gitkeep  env.py
scripts/: __init__.py  backfill_1d_klines.py  backfill_4h_klines.py  build_market_context_snapshot.py  build_strategy_pipeline_observations.py  check_alerting.py  check_binance_rest.py  check_core_config_logging.py  check_hermes_alerting.py  check_infra.py  check_kline_integrity.py  check_kline_integrity_1d.py  check_kline_quality_4h.py  check_manual_positions.py  check_market_kline_4h.py  check_project_invariants.py  check_project_skeleton.py  check_runtime_status.py  check_strategy_evidence_quality.py  check_strategy_pipeline_status.py  check_strategy_signal_scheduler.py  check_weak_model_output_quality.py  collect_1d_klines.py  collect_4h_klines.py  confirm_manual_execution_intent.py  parse_manual_execution_intent.py  record_manual_execution.py  run_daily_kline_integrity_check.py  run_model_analysis.py  run_model_review_aggregation.py  run_model_review_chain.py  run_model_review_chain_worker.py  run_price_monitor_10s.py  run_scheduler.py  run_strategy_advice.py  run_strategy_advice_scheduler.py  run_strategy_aggregation.py  run_strategy_evidence_aggregation.py  run_strategy_pipeline.py  run_strategy_signals.py  (+2 more)
tests/: __init__.py  test_1d_kline_incremental_collector.py  test_1d_kline_integrity_checker.py  test_1d_kline_manual_backfill.py  (+14 more)
(+529 files in other folders)
