[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-btc-agent"
version = "0.1.0"
description = "BTCUSDT low-frequency strategy assistance project skeleton."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "SQLAlchemy>=2.0",
    "PyMySQL>=1.1",
    "alembic>=1.13",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]
exclude = ["docs*", "tests*", "configs*", "migrations*", "logs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
